--- a/dashboard.html
+++ b/dashboard.html
@@ -234,8 +234,8 @@
             <div class="flex items-center gap-2">
                 <a href="notifikasi.html" id="notification-bell" class="relative w-10 h-10 flex items-center justify-center text-white rounded-full hover:bg-white/20 transition-colors">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 256 256"><path d="M221.8,175.94C216.25,166.38,208,139.33,208,104a80,80,0,1,0-160,0c0,35.34-8.26,62.38-13.81,71.94A16,16,0,0,0,48,200H88.81a40,40,0,0,0,78.38,0H208a16,16,0,0,0,13.8-24.06ZM128,216a24,24,0,0,1-22.62-16h45.24A24,24,0,0,1,128,216ZM48,184c7.7-13.24,16-43.92,16-80a64,64,0,1,1,128,0c0,36.05,8.28,66.73,16,80Z"></path></svg>
-                    <span id="notification-badge" class="absolute top-2 right-2 w-2 h-2 bg-red-500 rounded-full hidden"></span>
-                </a>
+                    <span id="notification-badge" class="absolute bg-red-500 rounded-full hidden"></span>
+                </a>              
                 <button id="dashboard-logout-btn" class="w-10 h-10 flex items-center justify-center text-white rounded-full hover:bg-white/20 transition-colors">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 256 256"><path d="M112,216a8,8,0,0,1-8,8H48a16,16,0,0,1-16-16V48A16,16,0,0,1,48,32h56a8,8,0,0,1,0,16H48V208h56A8,8,0,0,1,112,216Zm109.66-93.66-40-40a8,8,0,0,0-11.32,11.32L184.69,108H104a8,8,0,0,0,0,16h80.69l-14.35,14.34a8,8,0,0,0,11.32,11.32l40-40A8,8,0,0,0,221.66,122.34Z"></path></svg>
                 </button>
