--- a/tagihan.html
+++ b/tagihan.html
@@ -67,27 +67,21 @@
         <!-- Search Bar -->
         <div class="px-4 py-3">
           <label class="flex flex-col min-w-40 h-12 w-full">
-            <div class="flex w-full flex-1 items-stretch rounded-lg h-full">
-              <div
-                class="text-[#625095] flex border-none bg-[#eae8f3] items-center justify-center pl-4 rounded-l-lg border-r-0"
-                data-icon="MagnifyingGlass"
-                data-size="24px"
-                data-weight="regular"
-              >
+            <div class="flex w-full flex-1 items-stretch rounded-full h-full overflow-hidden bg-[#eae8f3]">
+              <div class="text-[#625095] flex items-center justify-center pl-4">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                   <path d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"></path>
                 </svg>
               </div>
               <input
                 id="search-input"
-                placeholder="Cari tagihan"
-                class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#110e1b] focus:outline-0 focus:ring-0 border-none bg-[#eae8f3] focus:border-none h-full placeholder:text-[#625095] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
+                placeholder="Cari tagihan..."
+                class="form-input flex w-full min-w-0 flex-1 resize-none text-[#110e1b] focus:outline-0 focus:ring-0 border-none bg-[#eae8f3] h-full placeholder:text-[#625095] px-4 pl-2 text-base font-normal leading-normal"
                 value=""
               />
             </div>
           </label>
           
-          <!-- Filter Info and Total (Hidden by default) -->
           <div id="total-container" class="hidden bg-white rounded-lg p-4 shadow-sm mt-4">
             <div class="text-center">
               <p id="filter-info" class="text-sm text-gray-600 mb-2"></p>
@@ -97,7 +91,7 @@
             </div>
           </div>
         </div>
-        
+
         <!-- Invoice List Container with proper scrolling -->
         <div id="invoice-list">
           <!-- Invoices will be dynamically loaded here -->
