--- a/pengeluaran.html
+++ b/pengeluaran.html
@@ -40,13 +40,27 @@
 
         <!-- Search and Total -->
         <div class="px-4 py-3 space-y-3">
-          <label class="flex flex-col min-w-40 h-12 w-full">
+          <!-- <label class="flex flex-col min-w-40 h-12 w-full">
             <div class="flex w-full flex-1 items-stretch rounded-full h-full overflow-hidden bg-[#eae8f3]">
               <div class="text-[#625095] flex items-center justify-center pl-4">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"></path></svg>
               </div>
               <input id="search-input" placeholder="Cari pengeluaran..." class="form-input flex w-full min-w-0 flex-1 resize-none text-[#110e1b] focus:outline-0 focus:ring-0 border-none bg-[#eae8f3] h-full placeholder:text-[#625095] px-4 pl-2 text-base"/>
             </div>
+            <button id="clear-search-btn" class="absolute right-3 top-1/2 -translate-y-1/2 w-6 h-6 bg-gray-400 text-white rounded-full flex items-center justify-center hidden hover:bg-gray-500">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 256 256"><path d="M208.49,191.51a12,12,0,0,1-17,17L128,145,64.49,208.49a12,12,0,0,1-17-17L111,128,47.51,64.49a12,12,0,0,1,17-17L128,111l63.51-63.52a12,12,0,0,1,17,17L145,128Z"></path></svg>
+            </button>
+          </label> -->
+          <label class="flex flex-col min-w-40 h-12 w-full relative">
+            <div class="flex w-full flex-1 items-stretch rounded-full h-full overflow-hidden bg-[#eae8f3]">
+              <div class="text-[#625095] flex items-center justify-center pl-4">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"></path></svg>
+              </div>
+              <input id="search-input" placeholder="Cari pengeluaran..." class="form-input flex w-full min-w-0 flex-1 resize-none text-[#110e1b] focus:outline-0 focus:ring-0 border-none bg-[#eae8f3] h-full placeholder:text-[#625095] px-4 pl-2 text-base"/>
+            </div>
+            <button id="clear-search-btn" class="absolute right-3 top-1/2 -translate-y-1/2 w-6 h-6 bg-gray-400 text-white rounded-full flex items-center justify-center hidden hover:bg-gray-500">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 256 256"><path d="M208.49,191.51a12,12,0,0,1-17,17L128,145,64.49,208.49a12,12,0,0,1-17-17L111,128,47.51,64.49a12,12,0,0,1,17-17L128,111l63.51-63.52a12,12,0,0,1,17,17L145,128Z"></path></svg>
+            </button>
           </label>
           <div id="total-expense-container" class="bg-white p-4 rounded-lg shadow hidden">
              <p class="text-sm text-gray-600">Total Pengeluaran</p>
