--- a/dashboard.html
+++ b/dashboard.html
@@ -212,6 +212,22 @@
             background: rgba(255, 255, 255, 0.9);
             border-radius: 8px;
         }
+
+        /* Toggle visibility styles */
+        .toggle-visibility-btn {
+            transition: all 0.3s ease;
+            cursor: pointer;
+            opacity: 0.7;
+        }
+
+        .toggle-visibility-btn:hover {
+            opacity: 1;
+            transform: scale(1.1);
+        }
+
+        .value-hidden {
+            user-select: none;
+        }
     </style>
 </head>
 <body>
