--- a/pengeluaran.html
+++ b/pengeluaran.html
@@ -24,10 +24,23 @@
       href="https://fonts.googleapis.com/css2?display=swap&family=Manrope%3Awght%40400%3B500%3B700%3B800&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
     />
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <style>
+        .search-filter-sticky {
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0;
+            z-index: 30;
+            background-color: #f9f8fb;
+        }
+        
+        .search-filter-sticky.is-sticky {
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
-<body>
+<body style="overflow-x: hidden;">
     <div
-      class="relative flex h-auto min-h-screen w-full flex-col bg-[#f9f8fb] group/design-root overflow-x-hidden pb-32"
+      class="relative flex h-auto min-h-screen w-full flex-col bg-[#f9f8fb] group/design-root pb-32"
       style='font-family: Manrope, "Noto Sans", sans-serif;'
     >
       <div class="flex-1">
@@ -38,19 +51,10 @@
             <svg fill="#000000" viewBox="0 -0.08 20 20" data-name="Capa 1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M14.32,6.87H5.68a.38.38,0,0,0-.38.38.37.37,0,0,0,.38.37h8.64a.37.37,0,0,0,.38-.37A.38.38,0,0,0,14.32,6.87Z"></path><path d="M12.32,9.56H7.68a.38.38,0,1,0,0,.75h4.64a.38.38,0,1,0,0-.75Z"></path><path d="M11.32,12.22H8.68a.38.38,0,1,0,0,.75h2.64a.38.38,0,1,0,0-.75Z"></path></g></svg>
         </header>
 
-        <!-- Search and Total -->
-        <div class="px-4 py-3 space-y-3">
-          <!-- <label class="flex flex-col min-w-40 h-12 w-full">
-            <div class="flex w-full flex-1 items-stretch rounded-full h-full overflow-hidden bg-[#eae8f3]">
-              <div class="text-[#625095] flex items-center justify-center pl-4">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"></path></svg>
-              </div>
-              <input id="search-input" placeholder="Cari pengeluaran..." class="form-input flex w-full min-w-0 flex-1 resize-none text-[#110e1b] focus:outline-0 focus:ring-0 border-none bg-[#eae8f3] h-full placeholder:text-[#625095] px-4 pl-2 text-base"/>
-            </div>
-            <button id="clear-search-btn" class="absolute right-3 top-1/2 -translate-y-1/2 w-6 h-6 bg-gray-400 text-white rounded-full flex items-center justify-center hidden hover:bg-gray-500">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 256 256"><path d="M208.49,191.51a12,12,0,0,1-17,17L128,145,64.49,208.49a12,12,0,0,1-17-17L111,128,47.51,64.49a12,12,0,0,1,17-17L128,111l63.51-63.52a12,12,0,0,1,17,17L145,128Z"></path></svg>
-            </button>
-          </label> -->
+        <!-- Sticky Search Container -->
+        <div class="search-filter-sticky">
+          <!-- Search and Total -->
+          <div class="px-4 py-3 space-y-3 bg-[#f9f8fb]">
           <label class="flex flex-col min-w-40 h-12 w-full relative">
             <div class="flex w-full flex-1 items-stretch rounded-full h-full overflow-hidden bg-[#eae8f3]">
               <div class="text-[#625095] flex items-center justify-center pl-4">
@@ -66,6 +70,7 @@
              <p class="text-sm text-gray-600">Total Pengeluaran</p>
              <p id="total-expense-display" class="text-2xl font-bold text-red-600">Rp 0</p>
              <p id="filter-info" class="text-xs text-gray-500 mt-1"></p>
+          </div>
           </div>
         </div>
 
