--- a/pelanggan.html
+++ b/pelanggan.html
@@ -308,11 +308,11 @@
               <path d="M213.66,82.34l-56-56A8,8,0,0,0,152,24H56A16,16,0,0,0,40,40V216a16,16,0,0,0,16,16H200a16,16,0,0,0,16-16V88A8,8,0,0,0,213.66,82.34ZM160,51.31,188.69,80H160ZM200,216H56V40h88V88a8,8,0,0,0,8,8h48V216Z"></path>
             </svg>
             <p class="text-lg font-semibold text-gray-700 mb-2">Pilih atau drop file CSV disini</p>
-            <p class="text-sm text-gray-500 mb-4">Maksimal 100 baris per upload</p>
+            <p class="text-sm text-gray-500 mb-4">Maksimal 500 baris per upload</p>
             <input type="file" id="csv-file-input" accept=".csv" class="hidden">
-            <button id="browse-file-btn" class="px-6 py-2 bg-[#683fe4] text-white rounded-lg font-semibold hover:bg-[#5324e0] transition-colors">
+            <label for="csv-file-input" class="inline-block px-6 py-2 bg-[#683fe4] text-white rounded-lg font-semibold hover:bg-[#5324e0] transition-colors cursor-pointer">
               Pilih File
-            </button>
+            </label>
           </div>
           
           <!-- Preview Section (Hidden by default) -->
