--- a/pelanggan.html
+++ b/pelanggan.html
@@ -194,7 +194,10 @@
                   </button>
               </div>
               <h2 class="text-[#110e1b] text-lg font-bold flex-1 text-center">Detail Pelanggan</h2>
-              <div class="w-12 flex justify-end">
+              <div class="flex items-center gap-2">
+                  <button id="delete-customer-icon-btn" class="text-red-600 flex size-10 shrink-0 items-center justify-center cursor-pointer hover:bg-red-50 rounded-full transition-colors">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"></path></svg>
+                  </button>
                   <button id="edit-customer-icon-btn" class="text-[#110e1b] flex size-10 shrink-0 items-center justify-center cursor-pointer hover:bg-gray-100 rounded-full transition-colors">
                       <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M227.31,73.37,182.63,28.69a16,16,0,0,0-22.63,0L36.69,152A15.86,15.86,0,0,0,32,163.31V208a16,16,0,0,0,16,16H92.69A15.86,15.86,0,0,0,104,219.31L227.31,96A16,16,0,0,0,227.31,73.37ZM92.69,208H48V163.31l88-88L180.69,120ZM192,108.69,147.31,64l24-24L216,84.69Z"></path></svg>
                   </button>
@@ -463,6 +466,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
     <script type="module" src="supabase-client.js?v=5"></script>
     <script type="module" src="auth.js?v=5"></script>
+    <script type="module" src="apply-settings.js"></script>
     <script type="module" src="pelanggan.js?v=5"></script>
     <script src="pwa-installer.js?v=5"></script>
 
