--- a/register.html
+++ b/register.html
@@ -84,10 +84,10 @@
         <div class="text-center mb-8 fade-in">
           <div class="floating-animation">
             <div class="w-20 h-20 mx-auto mb-4 bg-white rounded-full flex items-center justify-center shadow-lg p-2">
-              <img src="assets/sn-blue.png" alt="Selinggonet Logo" class="w-12 h-12 object-contain">
+              <img id="register-logo" src="assets/sn-blue.png" alt="Logo" class="w-12 h-12 object-contain">
             </div>
           </div>
-          <h1 class="text-3xl font-bold text-white mb-2">Selinggonet</h1>
+          <h1 id="register-app-name" class="text-3xl font-bold text-white mb-2">Selinggonet</h1>
         </div>
 
         <!-- Register Form -->
@@ -202,6 +202,7 @@
     </div>
     
     <script type="module" src="supabase-client.js"></script>
+    <script type="module" src="apply-settings.js"></script>
     <script type="module" src="register.js"></script>
 </body>
 </html>
