--- a/laporan.html
+++ b/laporan.html
@@ -118,10 +118,10 @@
                 <!-- Total Pendapatan -->
                 <div class="bg-gradient-to-br from-green-500 to-green-600 rounded-xl p-4 text-white shadow-lg">
                     <div class="flex items-center gap-2 mb-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256"><path d="M240,56H16a8,8,0,0,0,0,16H240a8,8,0,0,0,0-16ZM96,96a8,8,0,0,0-8-8H40a8,8,0,0,0,0,16H88A8,8,0,0,0,96,96Zm144,8H168a8,8,0,0,0,0,16h72a8,8,0,0,0,0-16Zm0,32H120a8,8,0,0,0,0,16H240a8,8,0,0,0,0-16Zm0,32H88a8,8,0,0,0,0,16H240a8,8,0,0,0,0-16Z"></path></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256"><path d="M128,88a40,40,0,1,0,40,40A40,40,0,0,0,128,88Zm0,64a24,24,0,1,1,24-24A24,24,0,0,1,128,152ZM240,56H224V40a8,8,0,0,0-16,0V56H48V40a8,8,0,0,0-16,0V56H16a8,8,0,0,0,0,16H32V184H16a8,8,0,0,0,0,16H32v16a8,8,0,0,0,16,0V200H208v16a8,8,0,0,0,16,0V200h16a8,8,0,0,0,0-16H224V72h16a8,8,0,0,0,0-16ZM208,184H48V72H208Z"></path></svg>
                         <span class="text-sm font-medium opacity-90">Total Pendapatan</span>
                     </div>
-                    <p id="total-pendapatan" class="text-2xl font-bold">Rp 0</p>
+                    <p id="total-pendapatan" class="text-lg md:text-xl font-bold">Rp 0</p>
                     <p class="text-xs opacity-75 mt-1" id="total-transaksi">0 Transaksi</p>
                 </div>
 
@@ -131,7 +131,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256"><path d="M173.66,98.34a8,8,0,0,1,0,11.32l-56,56a8,8,0,0,1-11.32,0l-24-24a8,8,0,0,1,11.32-11.32L112,148.69l50.34-50.35A8,8,0,0,1,173.66,98.34ZM232,128A104,104,0,1,1,128,24,104.11,104.11,0,0,1,232,128Zm-16,0a88,88,0,1,0-88,88A88.1,88.1,0,0,0,216,128Z"></path></svg>
                         <span class="text-sm font-medium opacity-90">Lunas</span>
                     </div>
-                    <p id="total-lunas" class="text-2xl font-bold">Rp 0</p>
+                    <p id="total-lunas" class="text-lg md:text-xl font-bold">Rp 0</p>
                     <p class="text-xs opacity-75 mt-1" id="count-lunas">0 Tagihan</p>
                 </div>
 
@@ -141,7 +141,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm0-40a16,16,0,1,1,16-16A16,16,0,0,1,128,176Zm0-88a36,36,0,0,0-36,36,8,8,0,0,0,16,0,20,20,0,1,1,38.2,7.47c-9.08,14.44-18.2,28.83-18.2,40.53a8,8,0,0,0,16,0c0-9.3,6.86-21.15,16-35a36,36,0,0,0-32-49Z"></path></svg>
                         <span class="text-sm font-medium opacity-90">Belum Bayar</span>
                     </div>
-                    <p id="total-unpaid" class="text-2xl font-bold">Rp 0</p>
+                    <p id="total-unpaid" class="text-lg md:text-xl font-bold">Rp 0</p>
                     <p class="text-xs opacity-75 mt-1" id="count-unpaid">0 Tagihan</p>
                 </div>
 
@@ -151,7 +151,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216ZM172.24,99.76a6,6,0,0,1,0,8.48l-40,40a6,6,0,0,1-8.48,0l-24-24a6,6,0,0,1,8.48-8.48L128,135.51l35.76-35.75A6,6,0,0,1,172.24,99.76Z"></path></svg>
                         <span class="text-sm font-medium opacity-90">Cicilan</span>
                     </div>
-                    <p id="total-installment" class="text-2xl font-bold">Rp 0</p>
+                    <p id="total-installment" class="text-lg md:text-xl font-bold">Rp 0</p>
                     <p class="text-xs opacity-75 mt-1" id="count-installment">0 Tagihan</p>
                 </div>
             </div>
