--- a/laporan.html
+++ b/laporan.html
@@ -154,6 +154,16 @@
                     <p id="total-installment" class="text-lg md:text-xl font-bold">Rp 0</p>
                     <p class="text-xs opacity-75 mt-1" id="count-installment">0 Tagihan</p>
                 </div>
+
+                <!-- Total Pengeluaran (Full Width) -->
+                <div class="col-span-2 bg-gradient-to-br from-purple-500 to-purple-600 rounded-xl p-4 text-white shadow-lg">
+                    <div class="flex items-center gap-2 mb-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256"><path d="M224,48H32a8,8,0,0,0-8,8V192a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A8,8,0,0,0,224,48ZM40,112H80v32H40Zm56,0H216v32H96ZM216,64V96H40V64ZM40,192V160H80v32Zm176,0H96V160H216v32Z"></path></svg>
+                        <span class="text-sm font-medium opacity-90">Pengeluaran</span>
+                    </div>
+                    <p id="total-pengeluaran" class="text-lg md:text-xl font-bold">Rp 0</p>
+                    <p class="text-xs opacity-75 mt-1" id="count-pengeluaran">0 Pengeluaran</p>
+                </div>
             </div>
 
             <!-- Export Buttons -->
@@ -190,10 +200,10 @@
                                     <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider">No</th>
                                     <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider whitespace-nowrap">Nama Pelanggan</th>
                                     <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider">ID</th>
-                                    <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider">Periode</th>
+                                    <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider">Keterangan</th>
                                     <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider">Jumlah</th>
                                     <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider">Status</th>
-                                    <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider whitespace-nowrap">Tgl Bayar</th>
+                                    <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider whitespace-nowrap">Tanggal</th>
                                     <th class="px-4 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider">Metode</th>
                                 </tr>
                             </thead>
