--- a/ganti-wifi.html
+++ b/ganti-wifi.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ganti WiFi - Selinggonet</title>
+    <title>Pengaturan WiFi - Selinggonet</title>
     
     <meta name="theme-color" content="#f9f8fc">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,7 +26,7 @@
             <button id="back-btn" class="text-[#110e1b] flex size-10 shrink-0 items-center justify-center cursor-pointer hover:bg-gray-100 rounded-full transition-colors">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path></svg>
             </button>
-            <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Ganti WiFi</h2>
+            <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Pengaturan WiFi</h2>
             <div class="w-10"></div>
         </header>
 
@@ -138,7 +138,7 @@
                         id="submit-btn"
                         class="w-full rounded-lg h-12 px-5 bg-[#683fe4] text-white text-base font-bold hover:bg-[#501ee6] transition-colors disabled:bg-gray-300 disabled:cursor-not-allowed"
                     >
-                        <span id="submit-text">Ganti WiFi</span>
+                        <span id="submit-text">SIMPAN</span>
                         <span id="submit-loading" class="hidden">Memproses...</span>
                     </button>
                 </form>
